--- a/Sample/SampleApi/appsettings.json
+++ b/Sample/SampleApi/appsettings.json
@@ -38,5 +38,21 @@
     "TokenKey": "MyTokenKeyNotHashedYet",
     "TokenValidateLife": false
   },
+  "KwfCacheConfiguration": {
+    "CleanupInterval": {
+      "Seconds": 0,
+      "Minutes": 15,
+      "Hours": 0
+    },
+    "CacheKeySettings": {
+      "WEATHER_SUMARIES": {
+        "Expiration": {
+          "Seconds": 0,
+          "Minutes": 1,
+          "Hours": 0
+        }
+      }
+    }
+  },
   "AllowedHosts": "*"
 }
