Improve logging settings on sample

--- a/Sample/SampleApi/appsettings.Development.json
+++ b/Sample/SampleApi/appsettings.Development.json
@@ -2,7 +2,16 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information",
+      "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"
     }
+  },
+  "LoggingConfiguration": {
+    "EnableApiLogs": true,
+    "EnableHttpLogs": true,
+    "Providers": [
+      "Console",
+      "Debug"
+    ]
   }
 }
