--- a/Sample/SampleApi/appsettings.json
+++ b/Sample/SampleApi/appsettings.json
@@ -2,13 +2,13 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Information",
-      "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"
+      "Microsoft.AspNetCore": "Warning"
+      /*"Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"*/
     }
   },
   "LoggingConfiguration": {
-    "EnableApiLogs": true,
-    "EnableHttpLogs": true,
+    "EnableApiLogs": false,
+    "EnableHttpLogs": false, /*if true, must be added to 'Logging:LogLevel[]' "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"*/
     "Providers": [
       "Console",
       "Debug"
