--- a/Sample/SampleApi/appsettings.json
+++ b/Sample/SampleApi/appsettings.json
@@ -54,5 +54,28 @@
       }
     }
   },
+  "KwfRedisCacheConfiguration": {
+    "Endpoints": [
+      {
+        "Url": "127.0.0.1",
+        "Port": 6147
+      }
+    ],
+    "Password": "InsertRedisPw",
+    "DefaultCacheInterval": {
+      "Seconds": 0,
+      "Minutes": 30,
+      "Hours": 0
+    },
+    "CachedKeySettings": {
+      "WEATHER_SUMARIES": {
+        "Expiration": {
+          "Seconds": 0,
+          "Minutes": 1,
+          "Hours": 0
+        }
+      }
+    }
+  },
   "AllowedHosts": "*"
 }
