--- a/KWFCaching/Redis/Redis.csproj
+++ b/KWFCaching/Redis/Redis.csproj
@@ -8,4 +8,15 @@
     <RootNamespace>KWFCaching.Redis</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.1" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Abstractions\Abstractions\Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
