--- a/Sample/SampleApi/SampleApi.csproj
+++ b/Sample/SampleApi/SampleApi.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\KWFCaching\Memory\Memory.csproj" />
+    <ProjectReference Include="..\..\KWFCaching\Redis\Redis.csproj" />
     <ProjectReference Include="..\..\KWFWebApi\Extensions\Extensions.csproj" />
   </ItemGroup>
 
