--- a/Sample/SampleApi/appsettings.json
+++ b/Sample/SampleApi/appsettings.json
@@ -57,11 +57,15 @@
   "KwfRedisCacheConfiguration": {
     "Endpoints": [
       {
-        "Url": "127.0.0.1",
+        "Url": "localhost",
         "Port": 6147
+      },
+      {
+        "Url": "localhost",
+        "Port": 6148
       }
     ],
-    "Password": "InsertRedisPw",
+    "Password": "MyRedisCachePassword",
     "DefaultCacheInterval": {
       "Seconds": 0,
       "Minutes": 30,
@@ -70,7 +74,7 @@
     "CachedKeySettings": {
       "WEATHER_SUMARIES": {
         "Expiration": {
-          "Seconds": 0,
+          "Seconds": 30,
           "Minutes": 1,
           "Hours": 0
         }
