Add possibility to disable https

--- a/Sample/SampleApi/appsettings.json
+++ b/Sample/SampleApi/appsettings.json
@@ -23,6 +23,7 @@
     "KestrelConfiguration": {
       "HttpPort": 4747,
       "HttpsPort": 14747,
+      "DisableHttps": null, 
       "ListenIpAddresses": null,
       "KestrelCertificateSettings": null
     },
@@ -57,12 +58,28 @@
   "KwfRedisCacheConfiguration": {
     "Endpoints": [
       {
-        "Url": "localhost",
-        "Port": 6147
+        "Url": "192.168.47.110",
+        "Port": 6347
       },
       {
-        "Url": "localhost",
-        "Port": 6148
+        "Url": "192.168.47.111",
+        "Port": 6347
+      },
+      {
+        "Url": "192.168.47.112",
+        "Port": 6347
+      },
+      {
+        "Url": "192.168.47.113",
+        "Port": 6347
+      },
+      {
+        "Url": "192.168.47.114",
+        "Port": 6347
+      },
+      {
+        "Url": "192.168.47.115",
+        "Port": 6347
       }
     ],
     "Password": "MyRedisCachePassword",
