--- a/Sample/SampleApi/appsettings.Development.json
+++ b/Sample/SampleApi/appsettings.Development.json
@@ -13,5 +13,18 @@
       "Console",
       "Debug"
     ]
+  },
+  "KwfRedisCacheConfiguration": {
+    "Endpoints": [
+      {
+        "Url": "localhost",
+        "Port": 6147
+      },
+      {
+        "Url": "localhost",
+        "Port": 6148
+      }
+    ],
+    "Password": "MyRedisCachePassword"
   }
 }
