--- a/Sample/SampleApi/appsettings.json
+++ b/Sample/SampleApi/appsettings.json
@@ -58,28 +58,12 @@
   "KwfRedisCacheConfiguration": {
     "Endpoints": [
       {
-        "Url": "192.168.47.110",
-        "Port": 6347
+        "Url": "localhost",
+        "Port": 6147
       },
       {
-        "Url": "192.168.47.111",
-        "Port": 6347
-      },
-      {
-        "Url": "192.168.47.112",
-        "Port": 6347
-      },
-      {
-        "Url": "192.168.47.113",
-        "Port": 6347
-      },
-      {
-        "Url": "192.168.47.114",
-        "Port": 6347
-      },
-      {
-        "Url": "192.168.47.115",
-        "Port": 6347
+        "Url": "localhost",
+        "Port": 6148
       }
     ],
     "Password": "MyRedisCachePassword",
