refactor sample api, fix reflection dependency register for queries/commands

--- a/Sample/SampleApi/appsettings.json
+++ b/Sample/SampleApi/appsettings.json
@@ -1,14 +1,15 @@
 {
+  "__comment__": "Add on LogLevel \"Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware\": \"Information\" for HttpLogs",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-      /*"Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"*/
     }
   },
   "LoggingConfiguration": {
     "EnableApiLogs": false,
-    "EnableHttpLogs": false, /*if true, must be added to 'Logging:LogLevel[]' "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"*/
+    "__coment__": "if true, must be added to 'Logging:LogLevel[]' \"Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware\": \"Information\"",
+    "EnableHttpLogs": false,
     "Providers": [
       "Console",
       "Debug"
@@ -23,7 +24,7 @@
     "KestrelConfiguration": {
       "HttpPort": 4747,
       "HttpsPort": 14747,
-      "DisableHttps": null, 
+      "DisableHttps": null,
       "ListenIpAddresses": null,
       "KestrelCertificateSettings": null
     },
