change loglevel settings for default config

--- a/Sample/SampleApi/appsettings.json
+++ b/Sample/SampleApi/appsettings.json
@@ -2,12 +2,13 @@
   "__comment__": "Add on LogLevel \"Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware\": \"Information\" for HttpLogs",
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Warning",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "LoggingConfiguration": {
-    "EnableApiLogs": false,
+    "EnableApiLogs": true,
     "__coment__": "if true, must be added to 'Logging:LogLevel[]' \"Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware\": \"Information\"",
     "EnableHttpLogs": false,
     "Providers": [
