--- a/Sample/SampleApi/appsettings.json
+++ b/Sample/SampleApi/appsettings.json
@@ -61,11 +61,15 @@
     "Endpoints": [
       {
         "Url": "localhost",
-        "Port": 6147
+        "Port": 6247
       },
       {
         "Url": "localhost",
-        "Port": 6148
+        "Port": 6248
+      },
+      {
+        "Url": "localhost",
+        "Port": 6249
       }
     ],
     "Password": "MyRedisCachePassword",
