Add endpoints to publish events on sample

--- a/Sample/SampleApi/appsettings.json
+++ b/Sample/SampleApi/appsettings.json
@@ -54,6 +54,9 @@
           "Minutes": 1,
           "Hours": 0
         }
+      },
+      "EVENT_LIST": {
+        "NoExpiration": true
       }
     }
   },
