--- a/Sample/SampleApi/SampleApi.csproj
+++ b/Sample/SampleApi/SampleApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\KWFCaching\Memory\Memory.csproj" />
     <ProjectReference Include="..\..\KWFCaching\Redis\Redis.csproj" />
+    <ProjectReference Include="..\..\KWFEventBus\KWFKafka\KWFKafka.csproj" />
     <ProjectReference Include="..\..\KWFWebApi\Extensions\Extensions.csproj" />
   </ItemGroup>
 
