add event consumer for kafka

--- a/Sample/SampleApi/appsettings.json
+++ b/Sample/SampleApi/appsettings.json
@@ -91,5 +91,18 @@
       }
     }
   },
+  "KwfKafkaConfiguration": {
+    "AppName": "SampleApi",
+    "Endpoints": [
+      {
+        "Url": "localhost",
+        "Port": 9092
+      },
+      {
+        "Url": "localhost",
+        "Port": 9093
+      }
+    ]
+  },
   "AllowedHosts": "*"
 }
