Improve kafka consumer implementation

--- a/Sample/SampleApi/appsettings.json
+++ b/Sample/SampleApi/appsettings.json
@@ -93,6 +93,7 @@
   },
   "KwfKafkaConfiguration": {
     "AppName": "SampleApi",
+    "ConsumerTimeout": 5000,
     "Endpoints": [
       {
         "Url": "localhost",
@@ -102,7 +103,11 @@
         "Url": "localhost",
         "Port": 9093
       }
-    ]
+    ],
+    "CommonProperties": null,
+    "ProducerProperties": null,
+    "ConsumerProperties": null,
+    "TopicConsumerProperties": null
   },
   "AllowedHosts": "*"
 }
