removed unneeded variable for delegate on route

--- a/KWFValidation/KWFCQRSValidation/KWFCQRSValidation.csproj
+++ b/KWFValidation/KWFCQRSValidation/KWFCQRSValidation.csproj
@@ -8,4 +8,8 @@
     <RootNamespace>KWFValidation.KWFCQRSValidation</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="10.3.6" />
+  </ItemGroup>
+
 </Project>
