--- a/KWFValidation/KWFCQRSValidation/KWFCQRSValidation.csproj
+++ b/KWFValidation/KWFCQRSValidation/KWFCQRSValidation.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="FluentValidation" Version="10.3.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\KWFCommon\Implementation\Implementation.csproj" />
+  </ItemGroup>
+
 </Project>
