--- a/KWFCaching/Abstractions/Abstractions.csproj
+++ b/KWFCaching/Abstractions/Abstractions.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	  <AssemblyName>KWFCaching.Abstractions</AssemblyName>
-	  <RootNamespace>KWFCaching.Abstractions</RootNamespace>
+	<AssemblyName>KWFCaching.Abstractions</AssemblyName>
+	<RootNamespace>KWFCaching.Abstractions</RootNamespace>
+	<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
-
 </Project>
