--- a/KWFCommon/Implementation/Implementation.csproj
+++ b/KWFCommon/Implementation/Implementation.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
 	<RootNamespace>KWFCommon.Implementation</RootNamespace>
 	<AssemblyName>KWFCommon.Implementation</AssemblyName>
+	<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
@@ -23,4 +24,9 @@
     <ProjectReference Include="..\Abstractions\Abstractions.csproj" />
   </ItemGroup>
 
+  <Target Name="CopyProjectReferencesToPackage" AfterTargets="BuildOnlySettings;ResolveReferences">
+	<ItemGroup>
+		<BuildOutputInPackage Include="$(OutDir)*"/>
+	</ItemGroup>
+  </Target>	
 </Project>
