--- a/KWFLogger/KWFFileLogger/KWFFileLogger.csproj
+++ b/KWFLogger/KWFFileLogger/KWFFileLogger.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <AssemblyName>KWFLogger.KWFFileLogger</AssemblyName>
     <RootNamespace>KWFLogger.KWFFileLogger</RootNamespace>
+	<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
 </Project>
