--- a/KWFAuthentication/Extensions/Extensions.csproj
+++ b/KWFAuthentication/Extensions/Extensions.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
 	<RootNamespace>KWFAuthentication.Extensions</RootNamespace>
 	<AssemblyName>KWFAuthentication.Extensions</AssemblyName>
+	<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,5 +16,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Implementation\Implementation.csproj" />
   </ItemGroup>
-
+	
+  <Target Name="CopyProjectReferencesToPackage" AfterTargets="BuildOnlySettings;ResolveReferences">
+	<ItemGroup>
+		<BuildOutputInPackage Include="$(OutDir)*"/>
+	</ItemGroup>
+  </Target>
 </Project>
