--- a/KWFLogger/KWFEventLogger/KWFEventLogger.csproj
+++ b/KWFLogger/KWFEventLogger/KWFEventLogger.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <AssemblyName>KWFLogger.KWFEventLogger</AssemblyName>
     <RootNamespace>KWFLogger.KWFEventLogger</RootNamespace>
+	<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
 </Project>
