--- a/KWFValidation/KWFCQRSValidation/KWFCQRSValidation.csproj
+++ b/KWFValidation/KWFCQRSValidation/KWFCQRSValidation.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <AssemblyName>KWFValidation.KWFCQRSValidation</AssemblyName>
     <RootNamespace>KWFValidation.KWFCQRSValidation</RootNamespace>
+	<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,5 +16,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\KWFCommon\Implementation\Implementation.csproj" />
   </ItemGroup>
-
+	
+  <Target Name="CopyProjectReferencesToPackage" AfterTargets="BuildOnlySettings;ResolveReferences">
+	<ItemGroup>
+		<BuildOutputInPackage Include="$(OutDir)*"/>
+	</ItemGroup>
+  </Target>
 </Project>
