improve localization configuration

--- a/Sample/SampleApi/appsettings.json
+++ b/Sample/SampleApi/appsettings.json
@@ -29,13 +29,21 @@
       "ListenIpAddresses": null,
       "KestrelCertificateSettings": null
     },
-    "LocalizationConfiguration": null,
-    "CorsConfiguration": {
-      "AllowAnyOrigin": true,
-      "AllowAnyHeader": true,
-      "AllowAnyMethod": true
-    }
-  },
+    "LocalizationConfiguration": {
+      "DefaultLocalizationCode": "en-US",
+      "SupportedLocalizationCodes": [
+        "en-GB",
+        "pt-PT",
+        "es-ES"
+      ],
+      "CurrencyLocalizationCode": "en-US"
+    },
+      "CorsConfiguration": {
+        "AllowAnyOrigin": true,
+        "AllowAnyHeader": true,
+        "AllowAnyMethod": true
+      }
+    },
   "BearerConfiguration": {
     "TokenIdentifier": "Authorization",
     "TokenKey": "MyTokenKeyNotHashedYet",
