Add log to file provider

--- a/Sample/SampleApi/appsettings.Development.json
+++ b/Sample/SampleApi/appsettings.Development.json
@@ -11,7 +11,8 @@
     "EnableHttpLogs": true,
     "Providers": [
       "Console",
-      "Debug"
+      "Debug",
+      "KwfFileLogger"
     ]
   }
 }
