--- a/Sample/SampleApi/appsettings.json
+++ b/Sample/SampleApi/appsettings.json
@@ -13,7 +13,19 @@
     "EnableHttpLogs": false,
     "Providers": [
       "Console",
-      "Debug"
+      "Debug",
+      "KwfFileLogger"
+    ]
+  },
+  "KwfFileLoggerConfiguration": {
+    "DefaultLogLevel": "Warning",
+    "LogEventConfigurations": [
+      {
+        "EventId": 147001,
+        "Path": "Kafka",
+        "LogLevel": "Error",
+        "LogLevelPath": false
+      }
     ]
   },
   "AppConfiguration": {
@@ -38,12 +50,12 @@
       ],
       "CurrencyLocalizationCode": "en-US"
     },
-      "CorsConfiguration": {
-        "AllowAnyOrigin": true,
-        "AllowAnyHeader": true,
-        "AllowAnyMethod": true
-      }
-    },
+    "CorsConfiguration": {
+      "AllowAnyOrigin": true,
+      "AllowAnyHeader": true,
+      "AllowAnyMethod": true
+    }
+  },
   "BearerConfiguration": {
     "TokenIdentifier": "Authorization",
     "TokenKey": "MyTokenKeyNotHashedYet",
