Improve consumer implementation for rabbitmq, add samples

--- a/Sample/SampleApi/appsettings.json
+++ b/Sample/SampleApi/appsettings.json
@@ -23,7 +23,13 @@
       {
         "EventId": 147001,
         "Path": "Kafka",
-        "LogLevel": "Error",
+        "LogLevel": "Information",
+        "LogLevelPath": false
+      },
+      {
+        "EventId": 147002,
+        "Path": "RabbitMQ",
+        "LogLevel": "Information",
         "LogLevelPath": false
       }
     ]
@@ -128,6 +134,15 @@
     "ProducerProperties": null,
     "ConsumerProperties": null,
     "TopicConsumerProperties": null
+  },
+  "KwfRabbitMQConfiguration": {
+    "AppName": "SampleApi",
+    "Endpoints": [
+      {
+        "Url": "localhost",
+        "Port": 5672
+      }
+    ]
   },
   "AllowedHosts": "*"
 }
