add kafka retry and dlq, enable nack retry on rabbitmq

--- a/Sample/SampleApi/appsettings.json
+++ b/Sample/SampleApi/appsettings.json
@@ -120,6 +120,7 @@
   "KwfKafkaConfiguration": {
     "AppName": "SampleApi",
     "ConsumerTimeout": 5000,
+    "ConsumerDLQRetry": 2,
     "Endpoints": [
       {
         "Url": "localhost",
@@ -137,6 +138,8 @@
   },
   "KwfRabbitMQConfiguration": {
     "AppName": "SampleApi",
+    "TopicAutoCommit": false,
+    "TopicReQueueOnFail": true,
     "Endpoints": [
       {
         "Url": "localhost",
