change auto-commit default to false

--- a/Sample/SampleApi/appsettings.json
+++ b/Sample/SampleApi/appsettings.json
@@ -133,7 +133,12 @@
     ],
     "CommonProperties": null,
     "ProducerProperties": null,
-    "ConsumerProperties": null,
+    "ConsumerProperties": [
+      {
+        "PropertyName": "enable.auto.commit",
+        "PropertyValue": "true"
+      }
+    ],
     "TopicConsumerProperties": null
   },
   "KwfRabbitMQConfiguration": {
