cancel rabbitmq consumer on error so no further messages are processed by it

--- a/Sample/SampleApi/appsettings.json
+++ b/Sample/SampleApi/appsettings.json
@@ -144,7 +144,7 @@
   "KwfRabbitMQConfiguration": {
     "AppName": "SampleApi",
     "TopicAutoCommit": false,
-    "TopicReQueueOnFail": true,
+    "TopicRequeueOnFail": true,
     "Endpoints": [
       {
         "Url": "localhost",
