Add json and extensions projects, Add Converters for STJ dates

--- a/KWFCaching/Redis/Redis.csproj
+++ b/KWFCaching/Redis/Redis.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\KWFJson\KWFJson.csproj" />
     <ProjectReference Include="..\Abstractions\Abstractions.csproj" />
   </ItemGroup>
 	
