--- a/KWFCommon/Implementation/Implementation.csproj
+++ b/KWFCommon/Implementation/Implementation.csproj
@@ -21,12 +21,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\KWFJson\KWFJson.csproj" />
     <ProjectReference Include="..\Abstractions\Abstractions.csproj" />
   </ItemGroup>
 
   <Target Name="CopyProjectReferencesToPackage" AfterTargets="BuildOnlySettings;ResolveReferences">
 	<ItemGroup>
-		<BuildOutputInPackage Include="$(OutDir)*"/>
+		<BuildOutputInPackage Include="$(OutDir)*" />
 	</ItemGroup>
   </Target>	
 </Project>
