--- a/KWFExtensions/KWFExtensions.csproj
+++ b/KWFExtensions/KWFExtensions.csproj
@@ -9,4 +9,8 @@
 	  <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
