--- a/KWFCaching/Redis/KWFCaching.Redis.csproj
+++ b/KWFCaching/Redis/KWFCaching.Redis.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\KWFJson\KWFJson.csproj" />
-    <ProjectReference Include="..\Abstractions\Abstractions.csproj" />
+    <ProjectReference Include="..\Abstractions\KWFCaching.Abstractions.csproj" />
   </ItemGroup>
 	
   <Target Name="CopyProjectReferencesToPackage" AfterTargets="BuildOnlySettings;ResolveReferences">
