--- a/KWFEventBus/KWFRabbitMQ/KWFEventBus.KWFRabbitMQ.csproj
+++ b/KWFEventBus/KWFRabbitMQ/KWFEventBus.KWFRabbitMQ.csproj
@@ -19,7 +19,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Abstractions\Abstractions.csproj" />
+		<ProjectReference Include="..\Abstractions\KWFEventBus.Abstractions.csproj" />
 	</ItemGroup>
 
 	<Target Name="CopyProjectReferencesToPackage" AfterTargets="BuildOnlySettings;ResolveReferences">
