--- a/KWFFunctionalTests/Abstractions/KWFFunctionalTests.Abstractions.csproj
+++ b/KWFFunctionalTests/Abstractions/KWFFunctionalTests.Abstractions.csproj
@@ -16,7 +16,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\KWFCommon\Implementation\Implementation.csproj" />
+		<ProjectReference Include="..\..\KWFCommon\Implementation\KWFCommon.Implementation.csproj" />
 	</ItemGroup>
 
 </Project>
