--- a/KWFValidation/KWFCQRSValidation/KWFValidation.KWFCQRSValidation.csproj
+++ b/KWFValidation/KWFCQRSValidation/KWFValidation.KWFCQRSValidation.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\KWFCommon\Implementation\Implementation.csproj" />
+    <ProjectReference Include="..\..\KWFCommon\Implementation\KWFCommon.Implementation.csproj" />
   </ItemGroup>
 	
   <Target Name="CopyProjectReferencesToPackage" AfterTargets="BuildOnlySettings;ResolveReferences">
