--- a/Sample/SampleApi/appsettings.json
+++ b/Sample/SampleApi/appsettings.json
@@ -35,10 +35,12 @@
     ]
   },
   "AppConfiguration": {
-    "SwaggerSettings": {
+    "OpenApiSettings": {
       "ApiName": "SampleApi",
       "BearerHeaderKey": "Authorization",
-      "ApiVersion": 1
+      "ApiVersion": 1,
+      "UseUI": true,
+      "UseDocumentation": true
     },
     "KestrelConfiguration": {
       "HttpPort": 4747,
