--- a/KWFAuthentication/Implementation/KWFAuthentication.Implementation.csproj
+++ b/KWFAuthentication/Implementation/KWFAuthentication.Implementation.csproj
@@ -17,11 +17,11 @@
   </ItemGroup>
 
   <ItemGroup>
-	<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 	
   <ItemGroup>
-	  <ProjectReference Include="..\Abstractions\Abstractions.csproj" />
+	  <ProjectReference Include="..\Abstractions\KWFAuthentication.Abstractions.csproj" />
   </ItemGroup>
 
   <Target Name="CopyProjectReferencesToPackage" AfterTargets="BuildOnlySettings;ResolveReferences">
