--- a/KWFCommon/Extensions/KWFCommon.Extensions.csproj
+++ b/KWFCommon/Extensions/KWFCommon.Extensions.csproj
@@ -4,15 +4,15 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	<RootNamespace>KWFAuthentication.Abstractions</RootNamespace>
-	<AssemblyName>KWFAuthentication.Abstractions</AssemblyName>
+	<RootNamespace>KWFCommon.Extensions</RootNamespace>
+	<AssemblyName>KWFCommon.Extensions</AssemblyName>
 	<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\KWFCommon\Abstractions\Abstractions.csproj" />
+    <ProjectReference Include="..\Implementation\KWFCommon.Implementation.csproj" />
   </ItemGroup>
-
+	
   <Target Name="CopyProjectReferencesToPackage" AfterTargets="BuildOnlySettings;ResolveReferences">
 	<ItemGroup>
 		<BuildOutputInPackage Include="$(OutDir)*"/>
