--- a/KWFWebApi/Extensions/KWFWebApi.Extensions.csproj
+++ b/KWFWebApi/Extensions/KWFWebApi.Extensions.csproj
@@ -4,17 +4,13 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	<RootNamespace>KWFAuthentication.Extensions</RootNamespace>
-	<AssemblyName>KWFAuthentication.Extensions</AssemblyName>
+    <RootNamespace>KWFWebApi.Extensions</RootNamespace>
+    <AssemblyName>KWFWebApi.Extensions</AssemblyName>
 	<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Implementation\Implementation.csproj" />
+    <ProjectReference Include="..\Implementation\KWFWebApi.Implementation.csproj" />
   </ItemGroup>
 	
   <Target Name="CopyProjectReferencesToPackage" AfterTargets="BuildOnlySettings;ResolveReferences">
