--- a/KWFOpenApi/KWFOpenApi.Html.Swagger/KWFOpenApi.Html.Swagger.csproj
+++ b/KWFOpenApi/KWFOpenApi.Html.Swagger/KWFOpenApi.Html.Swagger.csproj
@@ -13,6 +13,9 @@
 		</ItemGroup>
 	</Target>
 	<ItemGroup>
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.9.0" />
+	</ItemGroup>
+	<ItemGroup>
 	  <ProjectReference Include="..\KWFOpenApi.Html\KWFOpenApi.Html.csproj" />
 	</ItemGroup>
 </Project>
