--- a/KWFOpenApi/KWFOpenApi.Html/KWFOpenApi.Html.csproj
+++ b/KWFOpenApi/KWFOpenApi.Html/KWFOpenApi.Html.csproj
@@ -13,6 +13,14 @@
 			<BuildOutputInPackage Include="$(OutDir)*" />
 		</ItemGroup>
 	</Target>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.10" />
+		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1" />
+	</ItemGroup>
+	
 	<ItemGroup>
 	  <ProjectReference Include="..\KWFOpenApi.Metadata\KWFOpenApi.Metadata.csproj" />
 	</ItemGroup>
