--- a/KWFOpenApi/KWFOpenApi.Metadata/KWFOpenApi.Metadata.csproj
+++ b/KWFOpenApi/KWFOpenApi.Metadata/KWFOpenApi.Metadata.csproj
@@ -7,6 +7,11 @@
 		<RootNamespace>KWFOpenApi.Metadata</RootNamespace>
 		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1" />
+		<PackageReference Include="Microsoft.OpenApi.Readers" Version="1.6.22" />
+	</ItemGroup>
 	<Target Name="CopyProjectReferencesToPackage" AfterTargets="BuildOnlySettings;ResolveReferences">
 		<ItemGroup>
 			<BuildOutputInPackage Include="$(OutDir)*"/>
