--- a/KWFEventBus/KWFRabbitMQ/KWFEventBus.KWFRabbitMQ.csproj
+++ b/KWFEventBus/KWFRabbitMQ/KWFEventBus.KWFRabbitMQ.csproj
@@ -10,7 +10,6 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
@@ -20,6 +19,10 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Abstractions\KWFEventBus.Abstractions.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
 
 	<Target Name="CopyProjectReferencesToPackage" AfterTargets="BuildOnlySettings;ResolveReferences">
